--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"firebase": "^9.10.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-encrypt": "^1.0.1",
 		"react-jwt": "^1.1.7",
 		"react-redux": "^8.0.4",
 		"react-router": "^6.4.1",
