--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"emoji-picker-react": "^4.4.3",
 		"firebase": "^9.10.0",
 		"react": "^18.2.0",
+		"react-contenteditable": "^3.3.6",
 		"react-dom": "^18.2.0",
 		"react-encrypt": "^1.0.1",
 		"react-jwt": "^1.1.7",
