--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"crypto-js": "^4.1.1",
 		"emoji-picker-react": "^4.4.3",
 		"firebase": "^9.10.0",
 		"react": "^18.2.0",
@@ -28,6 +29,7 @@
 		"react-scripts": "5.0.1",
 		"react-timeago": "^7.1.0",
 		"sass": "^1.55.0",
+		"uuid": "^9.0.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
