--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID="821503532306"
 REACT_APP_FIREBASE_APP_ID="1:821503532306:web:c2fddd15861424219427cb"
 REACT_APP_FIREBASE_MEASUREMENT_ID="G-0B3SG51GS1"
 REACT_APP_ENCRYPT_KEY="kjSJfl109k@kfahSl0aa14"
+PORT=8000
